--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>hello</title>
+    <script src="app.js"></script>
+    <script src="style.css"></script>
   </head>
   <body>
-    <h1>hello coursera student !!</h1>
+    <h1>low cohesion and tight coupling</h1>
+    <div id="nameCalculator">
+      <div>
+        your name :
+        <input type="text" id="name">
+      </div>
+      <div id="output">
+
+      </div>
+    </div>
   </body>
 </html>
