--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
-    <title>hello</title>
+    <script src="angular.min.js"></script>
     <script src="app.js"></script>
-    <script src="style.css"></script>
+    <title>My first AngularJS App</title>
   </head>
   <body>
-    <h1>low cohesion and tight coupling</h1>
-    <div id="nameCalculator">
-      <div>
-        your name :
-        <input type="text" id="name">
-      </div>
-      <div id="output">
+    <div ng-controller="MyFirstController">
 
-      </div>
     </div>
   </body>
 </html>
