--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html ng-app="myFirstApp">
+<html>
   <head>
     <meta charset="utf-8">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
     <title>My first AngularJS App</title>
   </head>
-  <body>
-    <div ng-controller="MyFirstController">
+  <body ng-app="NameCalculator">
+
+    <h1>Name Calculator</h1>
+
+    <div ng-controller="NameCalculatorController">
+    <div>
+
+    Your name is :
+    <input type="text" ng-model='name' ng-keyup="displayNumeric();">
 
     </div>
+
+    <div>
+      total Numeric value of person's name is : {{totalValue}}
+
+    </div>
+    </div>
+
   </body>
 </html>
