--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -25,4 +25,24 @@
     </div>
 
   </body>
+</html>
+name calculator
+-->
+
+<!DOCTYPE html>
+<html>
+ <head>
+   <meta charset="utf-8">
+   <script src="angular.min.js"></script>
+   <script src="app.js"></script>
+   <title>Di in js and AngularJS</title>
+ </head>
+ <body ng-app="DiApp">
+   <h1>Di in js and AngularJS</h1>
+   <div ng_controller="DiController">
+     <input type="text" ng-model="name" ng-blur="upper();">
+
+   </div>
+
+ </body>
 </html>
