--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ name calculator
  </body>
 </html> code ro upper case the input field after elevating the focus on the field  -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html ng-app='MsgApp'>
   <head>
     <meta charset="utf-8">
@@ -61,6 +61,32 @@ name calculator
     <div ng-controller='MsgController'>
       {{name}} has a message for you: <br>
       {{sayMessage()}}
+      <div>
+        <button ng-click="feedYaakov()">Feed Yaakov</button>
+        <br>
+
+        <img ng-src="images/yaakov_{{stateOfBeing}}.png">
+      </div>
+    </div>
+  </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html ng-app='MsgApp'>
+  <head>
+    <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <style> body { font-size: 1.2em; }</style>
+    <title>Filters</title>
+  </head>
+  <body>
+    <h1>Custom Filters</h1>
+    <div ng-controller='MsgController'>
+      {{name}} has a message for you: <br>
+     orriginal  {{sayMessage()}}
+     loves : {{saylovesMessage}}
       <div>
         <button ng-click="feedYaakov()">Feed Yaakov</button>
         <br>
